<resources>
    <string name="selected_language">Italiano</string>
    <string name="language">Ciao, GFG</string>
    <string name="app_name">SocialMesh</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="password_retype">Conferma Password</string>
    <string name="date_of_birth">Data di Nascita</string>
    <string name="date_of_birth_error">Devi avere almeno 16 anni</string>
    <string name="fullname_error">Inserisci nome e cognome</string>
    <string name="Joined">Sei gia registrato?</string>
    <string name="register">Registrati</string>
    <string name="newUser">Sei nuovo a SocialMesh?</string>
    <string name="txt_or">O</string>
    <string name="logo">logo</string>
    <string name="google_login">Login con Google</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="facebook_login">Login con Facebook</string>
    <string name="sign_up">Registrati</string>
    <string name="full_name">Nome completo</string>
    <string name="error_password_invalid">Password non valida</string>
    <string name="error_password_null">La Password non può essere vuota</string>
    <string name="error_password_mismatch">Password non coincidono</string>
    <string name="error_email">Email non valida</string>
    <string name="check_login_data_message">Dati di login non corretti</string>
    <string name="check_signup_data_message">Dati di registrazione non corretti</string>
    <string name="Icona_Twitter">Icona Twitter</string>
    <string name="Icona_Google">Icona Google</string>
    <string name="Icona_Facebook">Icona Facebook</string>
    <string name="facebook_app_id">867410848419160</string>
    <string name="fb_login_protocol_scheme">fb867410848419160</string>
    <string name="Eventi">Eventi</string>
    <string name="Match">Match</string>
    <string name="Profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="error_retrieving_events">Si è verificato un problema nel recuperare gli eventi</string>
    <string name="logout">Esci</string>
    <string name="nome">Nome:</string>
    <string name="cognome">Cognome:</string>
    <string name="nome_e_cognome">Nome e Cognome :</string>
    <string name="email_1">Email:</string>
    <string name="lorem_ipsum_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                                            nisi ut aliquip ex ea commodo consequat.</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="nome_cognome">Nome Cognome</string>
    <string name="paese_nazione">Paese,Nazione</string>
    <string name="error_login_password_message">Password non corretta</string>
    <string name="error_login_user_message">Mail non corretta</string>
    <string name="unexpected_error">Errore di login inatteso</string>
    <string name="error_no_google_account_found_message">Nessun account Google trovato</string>
    <string name="error_password">Password non valida</string>
    <string name="error_user_collision_message">Errore di collisione utenti</string>
    <string name="modifica">Modifica</string>
    <string name="modifica2">M͟o͟d͟i͟f͟i͟c͟a͟</string>
    <string name="interessi">INTERESSI</string>
    <string name="title_activity_prova">ProvaActivity</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="settings">Impostazioni</string>
    <string name="cambia_lingua">Cambia lingua</string>
    <string name="indietro">Indietro</string>
    <string name="profile_picture">profile-picture</string>
    <string name="digita_un_messaggio">Digita un messaggio</string>
    <string name="fine">Fine</string>
    <string name="descrizione">DESCRIZIONE</string>
    <string name="a_g_g_i_u_n_g_i">A͟g͟g͟i͟u͟n͟g͟i͟</string>
    <string name="foto">FOTO</string>
    <string name="titolo">Titolo</string>
    <string name="data">Data</string>
    <string name="dark_mode">Modalità scura</string>
    <string name="inserisci_la_descrizione">Inserisci la descrizione</string>
    <string name="conferma">Conferma</string>
    <string name="back">Back</string>
    <string name="social">Social:</string>
    <string name="calcio">Calcio</string>
    <string name="palestra">Palestra</string>
    <string name="cucina">Cucina</string>
    <string name="ricette">Ricette</string>
    <string name="cucina_italiana">Cucina italiana</string>
    <string name="dolce">Dolce</string>
    <string name="vegetariano">Vegetariano</string>
    <string name="carniavoro">Carniavoro</string>
    <string name="classica">Classica</string>
    <string name="viaggi">Viaggi</string>
    <string name="destinazioni_esotiche">Destinazioni esotiche</string>
    <string name="escursioni">Escursioni</string>
    <string name="viaggi_low_cost">Viaggi low-cost</string>
    <string name="spiaggia">Spiaggia</string>
    <string name="natura">Natura</string>
    <string name="pittura">Pittura</string>
    <string name="fotografia">Fotografia</string>
    <string name="scrittura">Scrittura</string>
    <string name="cinema">Cinema</string>
    <string name="serie_tv">Serie TV</string>
    <string name="libri">Libri</string>
    <string name="giardinaggio">Giardinaggio</string>
    <string name="moda">Moda</string>
    <string name="tecnologia">Tecnologia</string>
    <string name="lavoro">Lavoro:</string>
    <string name="freelance">Freelance</string>
    <string name="imprenditoria">Imprenditoria</string>
    <string name="elettricista">Elettricista</string>
    <string name="blogger">Blogger</string>
    <string name="programmatore">Programmatore</string>
    <string name="varie">Varie:</string>
    <string name="lgbt">LGBT</string>
    <string name="single">Single</string>
    <string name="sposato">Sposato</string>
    <string name="impegnato">Impegnato</string>
    <string name="festival">Festival</string>
    <string name="nft">NFT</string>
    <string name="party">Party</string>
    <string name="karaoke">Karaoke</string>
    <string name="fumatore">Fumatore</string>
    <string name="instagram">Instagram</string>
    <string name="sport">Sport:</string>
    <string name="basket">Basket</string>
    <string name="tennis">Tennis</string>
    <string name="boxe">Boxe</string>
    <string name="crossfit">Crossfit</string>
    <string name="yoga">Yoga</string>
    <string name="motorsport">MotorSport</string>
    <string name="vegan">Veganismo</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="hobby">Hobby:</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="musica">Musica</string>
    <string name="last_added">Novità</string>
    <string name="near_you">Vicino a te</string>
    <string name="filter">Filtra</string>
    <string name="reset_filters">Resetta filtri</string>
    <string name="social_mesh_login">SOCIAL MESH</string>
    <string name="sign_in_with">Entra con</string>
    <string name="join">PARTECIPA ALL\'EVENTO</string>
    <string name="invia_mail_di_recupero">Invia mail di recupero</string>
    <string name="reset">Reset</string>
    <string name="torna_al_login">TORNA AL LOGIN</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="modalit_lista">Modalità lista</string>
    <string name="hai_bisogno_di_aiuto">Hai bisogno di aiuto?</string>
    <string name="join_button_text">PARTECIPA</string>
    <string name="dismiss_button_text">DISISCRIVITI</string>
    <string name="user_unsubscribed_message">Utente disiscritto con successo</string>
    <string name="user_subscribed_message">Utente iscritto con successo</string>
    <string name="avanti_button">Avanti</string>
    <string name="user_description_message">Descrizione salvata con successo!</string>
    <string name="preference_added_message">Preferenza salvata con successo! </string>
    <string name="contattaci">Contattaci</string>
    <string name="no_matches_message">Nessun match per ora :(\</string>
    <string name="le_tue_chat">Le tue chat</string>
    <string name="i_tuoi_eventi">I tuoi eventi</string>
    <string name="non_sei_iscritto_a_nessun_evento">Non sei iscritto a nessun evento</string>
    <string name="modalit_mappa">Modalità mappa</string>
</resources>