<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        android:text="@string/social_mesh_login"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeColor="#000000"
        android:layout_centerHorizontal="true"
        app:startIconDrawable="@drawable/baseline_mail_outline24dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/testo_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup2"
            android:backgroundTint="#CCFFFFFF"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/insertPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeColor="@color/black"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/lucchetto"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/signup2"
            android:backgroundTint="#CCFFFFFF"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmpassword_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/insertPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeColor="@color/black"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/lucchetto"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/signup2"
            android:backgroundTint="#CCFFFFFF"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmpassword_signup"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#CCFFFFFF"
        android:textColor="@color/black"
        android:text="@string/register"
        android:textSize="16sp"
        app:icon="@drawable/baseline_login_black_24dp"
        app:iconTint="#000000"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:indeterminateTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/buttonRegister"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>