<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
   >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <Button
        android:id="@+id/close_settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        style="@style/Widget.Material3.Button.TextButton"
        android:text="@string/fine"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@+id/close_settings_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:src="@drawable/baseline_library_add_red_700_24dp"
         />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descrizione"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:layout_below="@id/settings_profile_image"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>

    <LinearLayout
        android:id="@+id/linlay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDescription"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/myBackgroundDrawable"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:lines="3"
            android:gravity="top|start" />

    </LinearLayout>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textInterests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interessi"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:layout_below="@id/linlay2"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>
    <LinearLayout
        android:id="@+id/linlay3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInterests"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/myBackgroundDrawable"
        android:padding="8dp"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerInterests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            app:spanCount="3"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_edit_description"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_profile_image"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-1dp"
        android:padding="4dp"
        android:text="@string/modifica2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:textAllCaps="false"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_edit_photos"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linlay3"
        android:layout_alignParentEnd="true"
        android:text="@string/a_g_g_i_u_n_g_i"
        android:textSize="14sp"
        android:textStyle="bold"
        app:textAllCaps="false"
        android:padding="4dp"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/button_edit_interests"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linlay2"
        android:layout_alignParentEnd="true"
        android:text="@string/modifica2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:textAllCaps="false"
        android:padding="4dp"
        tools:ignore="MissingConstraints" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foto"
        android:textStyle="bold"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:layout_below="@id/linlay3"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPhotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPhotos"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"/>

</RelativeLayout>
</ScrollView>