<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_centerHorizontal="true"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_orange_36dp"
            />

        <!-- Layout Nome e Età -->
        <RelativeLayout
            android:id="@+id/layout_name_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image_view"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_cognome"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_toEndOf="@+id/userName"
                android:text="Eta"
                android:textSize="32sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_name_age"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/paese_nazione"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/button_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/baseline_person_orange_36dp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rellay1"
        android:orientation="horizontal"
        />

     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_address"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/md_theme_light_primary"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_address"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/email"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/md_theme_light_outline" />

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp" />

            <LinearLayout
                android:id="@+id/layout_dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userDate"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/darkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode"
                    android:textColor="@color/md_theme_light_primary"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dark_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />

            </LinearLayout>

            <View
                android:id="@+id/view_bar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:id="@+id/change_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userDate"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lingua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cambia_lingua"
                    android:gravity="top"
                    android:textColor="@color/md_theme_light_primary"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/country"
                    android:layout_width="36dp"
                    android:layout_height="24dp"
                    android:clickable="true"
                    />



            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_contattaci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/change_language"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hai_bisogno_di_aiuto"
                    android:textColor="@color/md_theme_light_primary"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_contattaci"
                    android:text="@string/contattaci"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/logout" />
    </RelativeLayout>

</LinearLayout>

    </LinearLayout>


